fixed spelling of triangle in shapeChoices within questions, to fix triangle render. adjusted shape and text sizing to be centered. square may still need adjusting.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Challenge 10: Object-Oriented Programming",
   "main": "index.js",
   "directories": {
-    "example": "examples",
     "lib": "lib",
     "test": "tests"
   },
@@ -17,5 +16,6 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "jest": "^29.7.0"
-  }
+  },
+  "devDependencies": {}
 }
